<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/start_up"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Lauguage"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:text="@string/luaguage"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance" />

        <Spinner
            android:id="@+id/LauguageSpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Theme"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:text="@string/theme"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance" />

        <Spinner
            android:id="@+id/Themespinner"
            android:layout_width="match_parent"
            android:layout_height="52dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/theme"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:text="@string/catorgory"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance" />

        <Spinner
            android:id="@+id/CatorgorySpinner"
            android:layout_width="match_parent"
            android:layout_height="52dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loader"
        style="?android:attr/progressBarStyle"
        android:layout_width="395dp"
        android:layout_height="79dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="ChangeSlide"
            android:text="@string/map" />

        <Button
            android:id="@+id/ListButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="ListNews"
            android:text="@string/list_articles" />
    </LinearLayout>

</LinearLayout>